Lots of wonderful updates!

--- a/res/menu/listmenu.xml
+++ b/res/menu/listmenu.xml
@@ -4,5 +4,9 @@
         android:id="@+id/delete_all"        
         android:title="Delete All">
     </item>
+    <item
+        android:id="@+id/unregister"        
+        android:title="Unregister">
+    </item>
 
 </menu> 
