--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
      
      <TextView android:layout_width="fill_parent"
          android:layout_height="wrap_content"
-         android:text="Full Name:"
+         android:text="Device Name:"
          android:layout_marginLeft="10dip"
          android:layout_marginRight="10dip"
          android:layout_marginTop="20dip"/>
