--- a/res/layout/task_edit.xml
+++ b/res/layout/task_edit.xml
@@ -14,7 +14,9 @@
     <LinearLayout
         android:id="@+id/LinearLayout01"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        
+         >
 
         <EditText
             android:id="@+id/task_edit_summary"
@@ -35,59 +37,59 @@
         android:imeOptions="actionNext" >
     </EditText>
 
-    <Button
-        android:id="@+id/task_edit_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/task_edit_confirm" >
-    </Button>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content" 
+        android:orientation="vertical"
+        >
 
         <Button
             android:id="@+id/task_edit_start_button"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Start" />
 
         <Button
             android:id="@+id/task_edit_pause"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Pause" />
 
         <Button
             android:id="@+id/task_edit_stop"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Stop" />
 
     </LinearLayout>
 
     <TableLayout
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
 
         <TableRow
             android:id="@+id/tableRow1"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
 
             <TextView
                 android:id="@+id/task_edit_start_label"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="Start time:"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:textAppearance="?android:attr/textAppearanceMedium" 
+                android:layout_weight="1.0"
+                />
 
             <TextView
                 android:id="@+id/task_edit_start_text"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="26 June 16:00"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:textAppearance="?android:attr/textAppearanceMedium" 
+                android:layout_gravity="right"
+                android:layout_weight="1.0"
+                />
 
         </TableRow>
 
@@ -101,15 +103,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="End time:"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:textAppearance="?android:attr/textAppearanceMedium" 
+                android:layout_weight="1.0"
+                />
 
             <TextView
                 android:id="@+id/task_edit_stop_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="27 June 15:00"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
+                android:textAppearance="?android:attr/textAppearanceMedium" 
+                android:layout_weight="1.0"
+                />
+				
         </TableRow>
 
         <TableRow
@@ -122,14 +128,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Total time:"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:textAppearance="?android:attr/textAppearanceMedium" 
+                android:layout_weight="1.0"
+                />
 
             <TextView
                 android:id="@+id/task_edit_total_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="3 hours"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:textAppearance="?android:attr/textAppearanceMedium" 
+                android:layout_weight="1.0"
+                />
         </TableRow>
 
     </TableLayout>
