--- a/res/layout/task_edit.xml
+++ b/res/layout/task_edit.xml
@@ -2,66 +2,51 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="20dip"
+    android:layout_marginRight="20dip"
     android:orientation="vertical" >
 
-    <Spinner
-        android:id="@+id/category"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/task_edit_department"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:entries="@array/priorities" >
-    </Spinner>
+        android:hint="@string/task_edit_department"
+        android:textAppearance="?android:attr/textAppearanceLarge" >
+    </TextView>
 
-    <LinearLayout
-        android:id="@+id/LinearLayout01"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/task_edit_client"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        
-         >
-
-        <EditText
-            android:id="@+id/task_edit_summary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="@string/task_edit_summary"
-            android:imeOptions="actionNext" >
-        </EditText>
-    </LinearLayout>
-
-    <EditText
-        android:id="@+id/task_edit_description"
-        android:layout_width="match_parent"
-        android:layout_height="117dp"
-        android:gravity="top"
         android:hint="@string/task_edit_description"
-        android:imeOptions="actionNext" >
-    </EditText>
+        android:textAppearance="?android:attr/textAppearanceMedium" >
+    </TextView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:orientation="vertical"
-        >
+    <TextView
+        android:id="@+id/task_edit_location"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/task_edit_summary"
+        android:textAppearance="?android:attr/textAppearanceMedium" >
+    </TextView>
 
-        <Button
-            android:id="@+id/task_edit_start_button"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Start" />
+    <Button
+        android:id="@+id/task_edit_start_button"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/task_button_start" />
 
-        <Button
-            android:id="@+id/task_edit_pause"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Pause" />
+    <Button
+        android:id="@+id/task_edit_stop"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/task_button_stop" />
 
-        <Button
-            android:id="@+id/task_edit_stop"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Stop" />
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/task_edit_pause"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/task_button_on_hold" />
 
     <TableLayout
         android:layout_width="fill_parent"
@@ -76,21 +61,20 @@
                 android:id="@+id/task_edit_start_label"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="Start time:"
-                android:textAppearance="?android:attr/textAppearanceMedium" 
                 android:layout_weight="1.0"
-                />
+                android:gravity="right"
+                android:paddingRight="15dip"
+                android:text="@string/task_start"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
                 android:id="@+id/task_edit_start_text"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="26 June 16:00"
-                android:textAppearance="?android:attr/textAppearanceMedium" 
-                android:layout_gravity="right"
                 android:layout_weight="1.0"
-                />
-
+                android:paddingLeft="15dip"
+                android:text="@string/task_not_started_yet"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
         </TableRow>
 
         <TableRow
@@ -102,20 +86,20 @@
                 android:id="@+id/task_edit_stop_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="End time:"
-                android:textAppearance="?android:attr/textAppearanceMedium" 
                 android:layout_weight="1.0"
-                />
+                android:gravity="right"
+                android:paddingRight="15dip"
+                android:text="@string/task_finish"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
                 android:id="@+id/task_edit_stop_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="27 June 15:00"
-                android:textAppearance="?android:attr/textAppearanceMedium" 
                 android:layout_weight="1.0"
-                />
-				
+                android:paddingLeft="15dip"
+                android:text="@string/task_na"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
         </TableRow>
 
         <TableRow
@@ -127,21 +111,21 @@
                 android:id="@+id/task_edit_total_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Total time:"
-                android:textAppearance="?android:attr/textAppearanceMedium" 
                 android:layout_weight="1.0"
-                />
+                android:gravity="right"
+                android:paddingRight="15dip"
+                android:text="@string/task_time"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <TextView
                 android:id="@+id/task_edit_total_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="3 hours"
-                android:textAppearance="?android:attr/textAppearanceMedium" 
                 android:layout_weight="1.0"
-                />
+                android:paddingLeft="15dip"
+                android:text="@string/task_na"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
         </TableRow>
-
     </TableLayout>
 
-</LinearLayout> 
+</LinearLayout>
