--- a/res/layout/task_row.xml
+++ b/res/layout/task_row.xml
@@ -14,23 +14,34 @@
     </ImageView>
 
     <TextView
-        android:id="@+id/category"
+        android:id="@+id/department"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/icon"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Category"         
+        android:text="Site Survey"          
         >
     </TextView>
     
     <TextView
-        android:id="@+id/client"
+        android:id="@+id/start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/department"
+        android:layout_alignParentRight="true"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="14 Mar"         
+        >
+    </TextView>
+    
+    <TextView
+        android:id="@+id/city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/icon"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_below="@id/category"                                
-        android:text="Client"         
+        android:layout_below="@id/department"                                
+        android:text="City"         
         >
     </TextView>
     
