--- a/res/menu/main_menu.xml
+++ b/res/menu/main_menu.xml
@@ -2,17 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
         android:id="@+id/delete_all"        
-        android:title="Delete All">
+        android:title="@string/main_menu_delete_all">
     </item>
     <item
         android:id="@+id/unregister"        
-        android:title="Unregister">
+        android:title="@string/main_menu_unregister">
     </item>
     <item
         android:id="@+id/settings"        
-        android:title="Settings"
+        android:title="@string/main_menu_settings"
         android:orderInCategory="100"
         >
     </item>
-
 </menu> 
