Inbox style notifications and smoother workflow on startup

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,23 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
-    
-    <PreferenceCategory
-        android:title="General"
-        android:key="first_category"
-     >  
-    
-    <EditTextPreference
-        android:key="pref_key_device_name"
-        android:summary="@string/pref_device_name_summary"
-        android:title="@string/pref_device_name_title"       
-    />
 
-    <EditTextPreference
-        android:key="pref_key_server_url"
-        android:summary="@string/pref_server_url_summary"
-        android:title="@string/pref_server_url_title"        
-    />
-    
+    <PreferenceCategory
+        android:key="first_category"
+        android:title="General" >
+        <EditTextPreference
+            android:key="pref_key_device_name"
+            android:summary="@string/pref_device_name_summary"
+            android:title="@string/pref_device_name_title" />
+        <EditTextPreference
+            android:key="pref_key_server_url"
+            android:summary="@string/pref_server_url_summary"
+            android:title="@string/pref_server_url_title" />
+    </PreferenceCategory>
+    <PreferenceCategory
+        android:key="second_category"
+        android:title="Notification" >
+        <RingtonePreference
+            android:key="notification_sound"
+            android:ringtoneType="notification"
+            android:showDefault="true"
+            android:showSilent="true"
+            android:summary="@string/pref_notification_summary"
+            android:title="@string/pref_notification_title"
+            android:defaultValue="@string/pref_notification_default"
+            />
     </PreferenceCategory>
 
 </PreferenceScreen>
