--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -5,15 +5,15 @@
         android:key="first_category"
         android:title="General" >
         <EditTextPreference
-            android:key="pref_key_device_name"
-            android:summary="@string/pref_device_name_summary"
-            android:title="@string/pref_device_name_title"             
+            android:key="@string/device_name"
+            android:summary="@string/device_name_summary"
+            android:title="@string/device_name_title"             
             />
         <EditTextPreference
-            android:key="pref_key_server_url"
-            android:summary="@string/pref_server_url_summary"
-            android:title="@string/pref_server_url_title"
-			android:defaultValue="@string/pref_server_url_default"
+            android:key="@string/server_url"
+            android:summary="@string/server_url_summary"
+            android:title="@string/server_url_title"
+			android:defaultValue="@string/server_url_default"
             />
     </PreferenceCategory>
     <PreferenceCategory
