Big commit after putting together notes and some old stuff, e.g. ability to delete items.
Also have custom GCM instead of .jar.

--- a/res/layout/job_detail.xml
+++ b/res/layout/job_detail.xml
@@ -21,6 +21,12 @@
         android:hint="@string/job_detail_client"
         android:textAppearance="?android:attr/textAppearanceMedium" >
     </TextView>
+    
+    <ListView
+        android:id="@+id/notes_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
 
     <Button
         android:id="@+id/job_start_button"
