--- a/res/layout/site_survey.xml
+++ b/res/layout/site_survey.xml
@@ -3,15 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    <ListView
-        android:id="@android:id/list"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
-    </ListView>
+        
+        <CheckBox
+            android:id="@+id/checkBox1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Survey Successful?" />
+        
+    </LinearLayout>
 
-    <TextView
-        android:id="@android:id/empty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/no_items" />
-</LinearLayout> 
+</LinearLayout>
